...
    @State private var timeout: Double = 3.0

    var body: some View {
        NavigationStack {
            Form(content: {
                SwiftUI.Section {
                    TextField("Name", text: $name)
                        .accessibilityIdentifier("addTarget_textfield_name")
                    TextField("Host", text: $host)
                        .textContentType(.URL)
                        .accessibilityIdentifier("addTarget_textfield_host")

                    HStack {
...
